Fix error in css - text aligns to left in pricing grid

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,7 +351,7 @@ main {
 
 /*Pricing box styling*/
 
-.pricing-grid > div {
+.pricing-grid>div {
     background-color: #060606;
     color: #ffffff;
     padding: 20px;
@@ -363,22 +363,23 @@ main {
 
 /*Icons in pricing box*/
 
-.pricing-grid > div p {
-margin: 0;
-text-align: center;
-color: #676b40;
-font-size: 3rem;
+.pricing-grid>div p {
+    margin: 0;
+    text-align: left;
+    color: #676b40;
+    font-size: 3rem;
 }
 
 /* Headings in pricing box*/
 
-.pricing-grid > div h3 h4 {
+.pricing-grid>div h3,
+.pricing-grid>h4 {
     margin: 10px 0;
     font-size: 1.5rem;
 }
 
 /*Text in pricing box*/
-.pricing-grid > div p:not(:first-child) {
+.pricing-grid>div p:not(:first-child) {
     margin: 10px 0;
     font-size: 1rem;
     color: #ffffff;
